# dotfiles

./: .bash_aliases  .bash_hacks.py  .bashrc  .dircolors  .gitconfig  .gvimrc  .ideavimrc  .pythonstartup.py  .wezterm.lua  .zshrc  README.md  diff.py  diffgen.py
.config/Code/User/: settings.json
.config/alacritty/: alacritty.toml
.config/btop/: btop.conf
.config/fontconfig/: fonts.conf
.config/ghostty/: config
.config/kitty/: kitty.conf  tab_bar.py
.config/matplotlib/: matplotlibrc
.config/pip/: pip.conf
.config/smartgit/version/: preferences.yml
.config/wireplumber/bluetooth.lua.d/: 50-bluez-config.lua
.config/wireplumber/wireplumber.conf.d/: 80-bluez-properties.conf
.config/xfce4/terminal/: terminalrc
.github/workflows/: build.yml  build_libgit2.bash  build_windows.bash  build_windows.sh  package.yml  style.yml  test.yml
.ipython/profile_default/: ipython_config.py
.jupyter/custom/: custom.css
.local/share/bash-completion/completions/: cargo  gh  git-lfs  goreleaser  hatch  pip  pipenv  pipx  rustup
.local/share/zsh-completions/completions/: _cargo  _gh  _git-lfs  _hatch  _pipenv  _pipx  _rustup
custom-prompt/: .clang-format  Makefile  clang-format.bash  custom-prompt.c  custom-prompt.cc  focus_utils.cc  focus_utils.hh  get_active_wid.hh  get_active_wid_linux.c  get_active_wid_linux.cc  get_active_wid_macos.m  get_active_wid_macos.mm  get_active_wid_windows.c  get_git_info.cc  json_logger.cc  json_logger.hh  macros.h
custom-prompt/bench/: bench.sh
diff/: diff.py  diff.py.sh  pyproject.toml  pyproject.toml.bak
