[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diff"
version = "0.0.0"
authors = [
    { name = "Vishal Pankaj Chandratreya" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint.per-file-ignores]
